# bombastic-desktop

./: .gitignore  CMakeLists.txt
dependencies/include/CEGUI/: CEGUIString.h
include/: .kdev_include_paths  desktop.h  object.h  pile.h
media/faham/: context_menu.overlay  object.material  rectangle.material  rectangle.overlay  room.material  root.layout  target.material
src/: desktop.cpp  main.cpp  object.cpp  pile.cpp
